--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "jbboynton/bc-upholstery",
-  "version": "0.1",
+  "version": "0.1.1",
   "type": "wordpress-muplugin",
-  "description": "WordPress CPT for BC Custom Canvas' upholstery services.",
+  "description": "WordPress CPT for BC Marine Canvas' upholstery services.",
   "homepage": "https://github.com/jbboynton/bc-upholstery",
   "authors": [
     {
